--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -1,7 +1,42 @@
 .about-container {
-    /* width: 100%; */
-    border: 2px solid black;
-    margin: 10px;
+    margin: 100px 10px 10px 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-container h1 {
+    font-size: 2.5em;
+    color: #5CA1EA;
+    margin-bottom: 20px;
+}
+
+.about-detail-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.about-info {
+    flex: 1;
+    margin-right: 20px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+
+}
+
+.about-info p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #333;
+}
+
+.skill {
+    flex: 1;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
 }
