--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,8 +1,16 @@
+.header {
+    background-color: #161E28;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+}
+
 .container {
-    margin: 10px;
+    padding: 5px 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    color: #F7F6F9;
 }
 
 .nav-flex {
@@ -21,5 +29,11 @@ ul {
 }
 
 ul li {
-    margin-right: 5px;
+    color: 161E28;
+    margin-right: 7px;
+}
+
+ul li a {
+    color: inherit;
+    text-decoration: none;
 }
